add square payments import

--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,7 @@
     <!-- Components -->
     <script type="module" src="/components/site-navbar.js"></script>
     <script type="module" src="/components/site-loader.js"></script>
+    <script src="https://web.squarecdn.com/v1/square.js"></script>
 
     <style>
         :root {
