update mobile scrollinig index and finish cart almost totally

--- a/cart.html
+++ b/cart.html
@@ -1102,7 +1102,7 @@
 
                     <div id="payStatus" class="notice" style="display:none; margin-top:10px;"></div>
 
-                    <div id="card-container" class="cardContainer" style="display:none;"></div>
+                    <div id="card-container" class="cardContainer" style="display:none; background-color: white;"></div>
 
                     <div id="payHint" class="hint">
                         Secure payment will appear after shipping is calculated.
